packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-001-schema-miss.ttrp
// expect: TTRP-RES-001
container c target polars {
    s = load(files.sales_2026, schema: no_such)
}
